--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/calendar": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "core-js": "^2.5.4",
+    "ionic2-calendar": "^0.5.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
