--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "ionic2-calendar": "^0.5.2",
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler": "~7.2.2",
+    "@angular/compiler-cli": "~7.2.2",
+    "typescript": "~3.1.6",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -46,9 +50,6 @@
     "@angular-devkit/build-angular": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
     "@types/node": "~10.12.0",
@@ -65,7 +66,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
   },
   "description": "An Ionic project",
   "cordova": {
