--- a/package.json
+++ b/package.json
@@ -43,9 +43,6 @@
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "typescript": "~3.1.6",
-    "zone.js": "~0.8.29"
-  },
-  "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
     "@angular-devkit/build-angular": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
@@ -65,7 +62,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
-    "tslint": "~5.12.0"
+    "tslint": "~5.12.0",
+    "zone.js": "~0.8.29"
+  },
+  "devDependencies": {
   },
   "description": "An Ionic project",
   "cordova": {
