--- a/package.json
+++ b/package.json
@@ -39,9 +39,18 @@
     "ionic2-calendar": "^0.5.2",
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.29",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "~0.12.3",
+    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/core": "~7.2.3",
+    "@angular-devkit/schematics": "~7.2.3",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler": "~7.2.2",
+    "@angular/compiler-cli": "~7.2.2",
+    "@angular/language-service": "~7.2.2",
+    "@ionic/angular-toolkit": "~1.3.0",
     "@types/node": "~10.12.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -56,15 +65,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
-    "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.12.3",
-    "@angular-devkit/core": "~7.2.3",
-    "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
-    "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.3.0",
     "typescript": "~3.1.6"
   },
   "description": "An Ionic project",
