--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "ionic2-calendar": "^0.5.2",
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.29"
-  },
-  "devDependencies": {
+    "zone.js": "~0.8.29",
+    
     "@angular-devkit/architect": "~0.12.3",
     "@angular-devkit/build-angular": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
@@ -66,6 +65,8 @@
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
+  },
+  "devDependencies": {
   },
   "description": "An Ionic project",
   "cordova": {
