--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
